--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -97,7 +97,9 @@ sync_network_data:
     commands:
       - command: "show interfaces routing-instance all terse | display json"
         parser: "none"
-        jpath: '"interface-information"[]."physical-interface"[]["logical-interface"[?name[?data==`{{ current_key }}`]]][][]."vrfname"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '"interface-information"[]."physical-interface"[]["logical-interface"[?name[?data==`{{ current_key }}`]]][][].{name: "vrfname"[0].data}'  # yamllint disable-line rule:quoted-strings
+        # post_processor: "{% if obj | length > 0 %}{{ obj[0] }}{% else %}{{ obj }}{% endif %}"
+        iterable_type: "dict"
   # interfaces__tagged_vlans:
   #   commands:
   #     - command: "show interfaces brief | display json"
