fix lag parsing to only parent physical interface

--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -93,6 +93,7 @@ sync_network_data:
         parser: "none"
         # "interface-information"[]["physical-interface"[?name[?data==`ge-1/0/3`]]][][]."logical-interface"[?name[?data=='ge-1/0/3.16386']][]
         jpath: '"interface-information"[].["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."logical-interface"[]."address-family"[]."ae-bundle-name"[].data'  # yamllint disable-line rule:quoted-strings
+        post_processor: "{% if obj | length > 0 %}{{ obj[0].split('.')[0] }}{% else %}{{ obj }}{% endif %}"
   interfaces__vrf:
     commands:
       - command: "show interfaces routing-instance all terse | display json"
