--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -38,30 +38,26 @@ sync_network_data:
     commands:
       - command: "show interfaces | display json"
         parser: "none"
-        # "interface-information"[]."physical-interface"[]."logical-interface"[].name[].data
-        jpath: '"interface-information"[]."physical-interface"[].[name[].data, "logical-interface"[].name[].data][][]'  # when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
+        # when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
+        jpath: '"interface-information"[]."physical-interface"[].[name[].data, "logical-interface"[].name[].data][][]'   # yamllint disable-line rule:quoted-strings
         post_processor: "{% set result={} %}{% for interface in obj %}{{ result.update({interface: {}}) or '' }}{% endfor %}{{ result | tojson }}"
   interfaces__type:
     commands:
       - command: "show interfaces | display json"
         parser: "none"
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split(".")[0] }}`]]][][]."link-level-type"[].data'  # yamllint disable-line rule:quoted-strings
-        # jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split(".")[0] }}`]]][][]."if-type"[].data'  # yamllint disable-line rule:quoted-strings
-        # jpath: '{% if "." in current_key %}"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."if-type"[].data {% else %}"interface-information"[]."physical-interface"[].["logical-interface"[?name[?data==`{{ current_key }}`]]][][]'
         post_processor: "{% if obj | length > 0 %}{% if 'ae' in current_key %}lag{% else %}{{ obj[0] | map_interface_type }}{% endif %}{% else %}other{% endif %}"
         iterable_type: "str"
   interfaces__ip_addresses:
     commands:
       - command: "show interfaces | display json"
         parser: "none"
-        # jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
         jpath: '{% if "." in current_key %}"interface-information"[]."physical-interface"[].["logical-interface"[?name[?data==`{{ current_key }}`]]][][].{prefix_length: "address-family"[]."interface-address"[]."ifa-destination"[].data, ip_address: "address-family"[]."interface-address"[]."ifa-local"[].data}{% else %}[]{% endif %}'  # yamllint disable-line rule:quoted-strings
         post_processor: "{{ obj | parse_junos_ip_address | tojson }}"
   interfaces__mtu:
     commands:
       - command: "show interfaces | display json"
         parser: "none"
-        # jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."mtu"[].data'  # yamllint disable-line rule:quoted-strings
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split(".")[0] }}`]]][][]."mtu"[].data'  # yamllint disable-line rule:quoted-strings
         post_processor: "{% if obj | length > 0 %}{% if 'nlimited' in obj[0] %}9192{% else %}{{ obj[0] }}{% endif %}{% endif %}"
   interfaces__mac_address:
@@ -91,7 +87,6 @@ sync_network_data:
     commands:
       - command: "show interfaces | display json"
         parser: "none"
-        # "interface-information"[]["physical-interface"[?name[?data==`ge-1/0/3`]]][][]."logical-interface"[?name[?data=='ge-1/0/3.16386']][]
         jpath: '"interface-information"[].["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."logical-interface"[]."address-family"[]."ae-bundle-name"[].data'  # yamllint disable-line rule:quoted-strings
         post_processor: "{% if obj | length > 0 %}{{ obj[0].split('.')[0] }}{% else %}{{ obj }}{% endif %}"
   interfaces__vrf:
@@ -99,15 +94,14 @@ sync_network_data:
       - command: "show interfaces routing-instance all terse | display json"
         parser: "none"
         jpath: '"interface-information"[]."physical-interface"[]["logical-interface"[?name[?data==`{{ current_key }}`]]][][].{name: "vrfname"[0].data}'  # yamllint disable-line rule:quoted-strings
-        # post_processor: "{% if obj | length > 0 %}{{ obj[0] }}{% else %}{{ obj }}{% endif %}"
         iterable_type: "dict"
-  # interfaces__tagged_vlans:
-  #   commands:
-  #     - command: "show interfaces brief | display json"
-  #       parser: "none"
-  #       jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-string
-  # interfaces__untagged_vlan:
-  #   commands:
-  #     - command: "show interfaces brief | display json"
-  #       parser: "none"
-  #       jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+# interfaces__tagged_vlans:
+#   commands:
+#     - command: "show interfaces brief | display json"
+#       parser: "none"
+#       jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-string
+# interfaces__untagged_vlan:
+#   commands:
+#     - command: "show interfaces brief | display json"
+#       parser: "none"
+#       jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
