--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "3.1.0b1"
+version = "3.1.0b3"
 description = "A app for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
@@ -33,7 +33,7 @@ nautobot = "^2.2.3"
 nautobot-ssot = "^2.6.0"
 nautobot-plugin-nornir = "^2.0.0"
 jdiff = "^0.0.6"
-ntc-templates = "^4.3.0"
+ntc-templates = {git = "https://github.com/networktocode/ntc-templates.git", rev = "master"}
 
 [tool.poetry.group.dev.dependencies]
 bandit = "*"
