--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ nautobot-ssot = "^2.6.0"
 nautobot-plugin-nornir = "^2.0.0"
 jdiff = "^0.0.6"
 ntc-templates = {git = "https://github.com/networktocode/ntc-templates.git", rev = "master"}
+nautobot-secrets-providers = "^2.0.1"
+python-tss-sdk = "*"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "*"
