first sync network data test and run formatting

--- a/nautobot_device_onboarding/tests/mock/command_mappers/mock_cisco_ios.yml
+++ b/nautobot_device_onboarding/tests/mock/command_mappers/mock_cisco_ios.yml
@@ -114,5 +114,5 @@ sync_network_data:
       - command: "show interfaces switchport"
         parser: "textfsm"
         jpath: "[?contains(interface, '{{ current_key | abbreviated_interface_name  }}')].native_vlan"
-        post_processor: "{% if obj | length > 0 %}{{ vlan_map | selectattr('id', 'eq', obj[0]) | list }}{% else %}{{ obj }}{% endif %}"
+        post_processor: "{% if obj | length > 0 %}{{ vlan_map | selectattr('id', 'eq', obj[0]) | list | tojson }}{% else %}{{ obj }}{% endif %}"
         iterable_type: "dict"
