Prep 4.0.0b0 for a tagged release to pypi (#182)
* add a more advanced jdiff jpath query to ios for ni interfaces

* updates for parsing

* bump version

* update network importer

* add platform none check

* fix formatting

* add conditional for no platform

* add conditional for no platform

* add conditional for no platform

* add unsupported check

* add readtimeout

* add failed task UI logging

* add junos support to do

* add logging for failed reason

* add junos support to do

* update junos, add json load to linterfaces

* update junos, add json load to linterfaces

* update ios to use tojson filter

* update ios to use tojson filter

* formatting, update function name and doc strings

* use j2 sandbox and nb core render function

* poetry lock and black

* black

* fix juniper_junos.yml

* juniper_junos.yml formatting

* update ssot network adapter, models and mock data

* ios NI initial working

* fix do for junos

* add csv support wip

* update csv import feature

* update csv support

* update csv support

* fix dup ip address extraction

* fix mgmt_interface from list to string

* update csv support

* add orm caching method to onboarding adapter

* update csv support

* remove print statement

* send interfaces in ios as json

* update csv support

* bump version

* update NI

* remove tag filter option

* remove tag filter

* decouple nornir play from job to remove enqueue job option

* clean up via black

* update csv import logging

* fix bug in _process_csv_data

* remove command getter job

* update NI

* updates for description and enabled

* update mock data

* formatting

* black

* pylint

* update logging message

* flake8

* update CSV support

* update lock file

* update lock and toml files

* update logging around existing devies

* change command mapper formatting and DO for junos

* fix junos

* remove prefix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "3.1.0b3"
+version = "4.0.0b0"
 description = "A app for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
@@ -34,6 +34,8 @@ nautobot-ssot = "^2.6.0"
 nautobot-plugin-nornir = "^2.0.0"
 jdiff = "^0.0.6"
 ntc-templates = {git = "https://github.com/networktocode/ntc-templates.git", rev = "master"}
+nautobot-secrets-providers = "^2.0.1"
+python-tss-sdk = "*"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "*"
