--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,12 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "3.0.1"
+version = "4.0.0b1"
 description = "A app for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/nautobot/nautobot-app-device-onboarding"
 repository = "https://github.com/nautobot/nautobot-app-device-onboarding"
-documentation = "https://docs.nautobot.com/projects/device-onboarding/en/latest/"
 keywords = ["nautobot", "nautobot-app", "nautobot-plugin"]
 classifiers = [
     "Intended Audience :: Developers",
@@ -30,7 +29,13 @@ include = [
 python = ">=3.8,<3.12"
 napalm = ">=2.5.0, <5"
 zipp = "^3.4.0"
-nautobot = "^2.0.3"
+nautobot = "^2.2.3"
+nautobot-ssot = "^2.6.0"
+nautobot-plugin-nornir = "^2.0.0"
+jdiff = "^0.0.6"
+ntc-templates = "^5.1.0"
+nautobot-secrets-providers = "^2.0.1"
+python-tss-sdk = "*"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "*"
@@ -57,8 +62,6 @@ mkdocs-version-annotations = "1.0.0"
 mkdocstrings = "0.22.0"
 mkdocstrings-python = "1.5.2"
 towncrier = "~23.6.0"
-to-json-schema = "*"
-jsonschema = "*"
 
 [tool.poetry.extras]
 all = [
@@ -87,6 +90,9 @@ exclude = '''
 )
 '''
 
+[tool.coverage.report]
+show_missing = true
+
 [tool.pylint.master]
 # Include the pylint_django plugin to avoid spurious warnings about Django patterns
 load-plugins="pylint_django, pylint_nautobot"
@@ -100,10 +106,20 @@ no-docstring-rgx="^(_|test_|Meta$)"
 # Line length is enforced by Black, so pylint doesn't need to check it.
 # Pylint and Black disagree about how to format multi-line arrays; Black wins.
 disable = """,
+    arguments-differ,
     line-too-long,
     duplicate-code,
-    too-many-lines,
+    logging-fstring-interpolation,
+    too-few-public-methods,
     too-many-ancestors,
+    too-many-arguments,
+    too-many-branches,
+    too-many-lines,
+    too-many-locals,
+    too-many-public-methods,
+    too-many-statements,
+    unused-argument,
+    unused-import,
     """
 
 [tool.pylint.miscellaneous]
@@ -160,7 +176,7 @@ requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.towncrier]
-package = "nautobot_device_onboarding"
+package = "nautobot"
 directory = "changes"
 filename = "docs/admin/release_notes/version_X.Y.md"
 template = "development/towncrier_template.j2"
